etapas da Urna Eletronica

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
         </div>
     </div>
-    
-</body>
+    <script src="etapas.js"></script>
+    <script src="script.js"></script>
+    </body>
 </html>
